5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1884_3179.log
== TEST (2019-07-04 18:11:49) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = vet[i]
	else:
		z[i] = vet[i]
print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:13:21) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = vet[i]
	else:
		z[i] = vet[i]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:13:36) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1
	else:
		z[i] = vet[i]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:13:53) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = vet[i]
	else:
		z[i] = vet[i]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:14:37) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = vet[i]
		i = i + 0
	else:
		z[i] = vet[i]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:15:17) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:15:44) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1
	else:
		z[-1 * (i+1)] = vet[i]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:17:34) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
	b = b + 1
	c = c + 0
	else:
		z[c] = vet[c]
	b = b + 0
	c = c + 1
print(z)

-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:17:48) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	else:
		z[c] = vet[c]
		b = b + 0
		c = c + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:18:17) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:19:07) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	else:
		z[c] = vet[c]
		c = c + 1
		b = b + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:20:13) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
while (b < size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	else:
		z[c] = vet[c]
		c = c + 1
		b = b + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:20:21) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
while (c < size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	else:
		z[c] = vet[c]
		c = c + 1
		b = b + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:21:34) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	else:
		z[c] = vet[c]
		c = c + 1
		b = b + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:21:51) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:23:00) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	if(vet[b] != 1):
		z[c] = vet[c]
		c = c + 1
		b = b + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:01) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	if(vet[b] != 1):
		z[c] = vet[c]
		c = c + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:13) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:28) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	elif(vet[c] != 1):
		z[c] = vet[c]
		b = b + 0
		c = c + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:36) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	if(vet[c] != 1):
		z[c] = vet[c]
		b = b + 0
		c = c + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:58) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
		c = c + 0
	if(vet[c] != 1):
		z[c] = vet[c]
		b = b + 0
		c = c + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:27:25) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
for j in range(size(vet)):
	if(vet[c] != 1):
		z[c] = vet[c]
		c = c + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:27:30) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] == 1):
		z[-1 * (b+1)] = 1
		b = b + 1
for j in range(size(vet)):
	if(vet[c] != 1):
		z[c] = vet[c]
		c = c + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:28:19) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1
for j in range(size(vet)):
	if(vet[j] != 1):
		z[j] = vet[j]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:28:37) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:29:49) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1
for j in range(size(vet)):
	if(vet[j] != 1):
		z[j] = vet[j]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:33:24) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1
	b = b + 1
for j in range(size(vet)):
	if(vet[b] != 1):
		z[-1 * (b + 1)] = vet[-1 * (b + 1)]
		b = b + 1		
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:33:38) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1
	b = b + 1
for j in range(b):
	if(vet[b] != 1):
		z[-1 * (b + 1)] = vet[-1 * (b + 1)]
		b = b + 1		
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:33:49) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
for i in range(size(vet)):
	if(vet[i] == 1):
		z[-1 * (i+1)] = 1
	b = b + 1
for j in range(b-1):
	if(vet[b] != 1):
		z[-1 * (b + 1)] = vet[-1 * (b + 1)]
		b = b + 1		
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:43:27) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:43:55) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		b = b + 1
	else:
		c = c + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:44:13) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		b = b + 1
	c = c + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:44:37) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:45:40) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	b = b + 1
for j in range(size(vet)):
	if(vet[j] == 1):
		z[-1 * (j + 1)] = 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:45:47) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	b = b + 1
for j in range(size(vet)):
	if(vet[j] == 1):
		z[-1 * (j + 1)] = 1
print(z)

-- EXECUTION TIME:
0.943253
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[2 1 1 1 0 0 0]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[5 4 3 2 1 1 1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 1 0 1 5 0 1 0 1]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:46:00) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	b = b + 1
for j in range(size(vet)):
	if(vet[j] == 1):
		z[-1 * (j + 1)] = 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:46:13) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	b = b + 1
for j in range(size(vet)):
	if(vet[j] == 1):
		z[-1 * (j + 1)] = 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:47:01) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[c] = 1
	b = b + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:47:11) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[c] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:47:29) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[c] = 1
		c = c + 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:47:48) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[-1 * (c + 1)] = 1
		c = c + 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:47:57) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[-1 * (b + 1)] = 1
		c = c + 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:48:21) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[b] = 1
		c = c + 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:48:29) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[b] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:49:08) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[b] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:49:46) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[4] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:50:43) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[b] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:50:55) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[b] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:00) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	else:
		z[b] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:22) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(vet[b] = 1)
		z[b] = 1
	b = b + 1
print(z)

-- ERROR:
File "XXXX", line 10
    if(vet[b] = 1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:27) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(vet[b] == 1)
		z[b] = 1
	b = b + 1
print(z)

-- ERROR:
File "XXXX", line 10
    if(vet[b] == 1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:30) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(vet[b] == 1):
		z[b] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:55) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(vet[i] == 1):
		z[i] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:52:10) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(z[i] == 1):
		z[i] = 1
	b = b + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:53:18) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	b = b + 1
for j in range(size(vet)):
	if(z[j] = 1):
		z[j] = 1
print(z)

-- ERROR:
File "XXXX", line 12
    if(z[j] = 1):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:53:22) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	b = b + 1
for j in range(size(vet)):
	if(z[j] == 1):
		z[j] = 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:53:48) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	b = b + 1
for j in range(size(z)):
	if(z[j] == 0):
		z[j] = 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:56:21) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(vet[b] == 1):
		z[b] = 1
		c = c  + 0
	b = b + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:56:30) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(vet[b] == 1):
		z[b] = 1
		c = c  + 0
	b = b + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:57:26) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(vet[b] == 0):
		z[b] = 1
		c = c + 0
	b = b + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:00:44) 
-- CODE:
from numpy import *
vet = array(eval(input("digite o vetor: ")))
z = zeros(size(vet),dtype = int)
b = 0
c = 0
for i in range(size(vet)):
	if(vet[b] != 1):
		z[c] = vet[b]
		c = c + 1
	if(vet[b] == 1):
		z[b] = vet[b]
	b = b + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
